<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/set_pop"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_addown"
        style="@style/quick_option_item"
        android:padding="6dp"
        android:text="@string/addown" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:alpha="0.6"
        android:background="@color/linecolor" />

    <TextView
        android:id="@+id/tv_buyInMall"
        style="@style/quick_option_item"
        android:padding="6dp"
        android:text="@string/buyInMall" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.6"
        android:background="@color/linecolor" />
    <TextView
        android:id="@+id/tv_cancel"
        style="@style/quick_option_item"
        android:layout_marginTop="3dp"
        android:padding="6dp"
        android:text="@string/cancel" />

</LinearLayout>
