<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@id/id_titlelayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_centerHorizontal="true"
        android:background="@color/roam_color" >

        <Button style="@style/backbtnstyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/account_safe"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <ImageView
        android:id="@id/id_toplogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_titlelayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/toplogo_margin"
        android:layout_marginTop="@dimen/toplogo_margin"
        android:src="@drawable/logo_account_safe" />

    <TextView
        android:id="@+id/tv_safelevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_toplogo"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/please_connect_mlbao_wifi"
        android:textColor="@color/text_black"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/tv_accountsafetip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_safelevel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/accountsafe_tip"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/small_text_size" />

    <ImageView
        android:id="@id/id_line1"
        style="@style/lineHorizontalSrcStyle"
        android:layout_below="@id/tv_accountsafetip"
        android:layout_marginTop="@dimen/submit_marginTop" />

    <TextView
        android:id="@+id/tv_changepassword"
        style="@style/normalTextViewJumpStyle"
        android:layout_below="@id/id_line1"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_password_new"
        android:text="@string/changepassword" />

    <ImageView
        android:id="@id/id_line2"
        style="@style/lineHorizontalSrcStyle"
        android:layout_below="@id/tv_changepassword"
        android:paddingLeft="40dp" />

    <TextView
        android:id="@+id/tv_bindPhone"
        style="@style/normalTextViewJumpStyle"
        android:layout_below="@id/id_line2"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_bind_phone"
        android:text="@string/phonebind" />

    <ImageView
        android:id="@id/id_line3"
        style="@style/lineHorizontalSrcStyle"
        android:layout_below="@id/tv_bindPhone"
        android:paddingLeft="40dp" />

    <TextView
        android:id="@+id/tv_bindEmail"
        style="@style/normalTextViewJumpStyle"
        android:layout_below="@id/id_line3"
        android:clickable="true"
        android:drawableLeft="@drawable/ic_bind_mail"
        android:text="@string/emailbind" />

    <ImageView
        android:id="@id/id_line4"
        style="@style/lineHorizontalSrcStyle"
        android:layout_below="@id/tv_bindEmail" />

</RelativeLayout>